# myrag_proto

./: .gitignore  build.gradle.kts  gen-proto.sh  pyproject.toml  rag.proto  settings.gradle.kts
.github/workflows/: publish.yml
gen-python/: rag_pb2.py  rag_pb2.pyi  rag_pb2_grpc.py
gen-python/myrag_proto/: __init__.py  rag_pb2_grpc.py
src/main/proto/: rag.proto
