[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myrag-proto"
version = "1.0.10"
description = "MyRag gRPC proto stubs (Python)"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.72.0",
    "protobuf>=5.29.0",
]

[tool.setuptools]
package-dir = {"" = "gen-python"}
py-modules = ["rag_pb2", "rag_pb2_grpc"]
